--- a/server app/templates/index.html
+++ b/server app/templates/index.html
@@ -1,14 +1,17 @@
-<html>
-<head>
-<link rel="stylesheet" href='/static/style.css' />
-</head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+   </head>
 <body>
-<h1>My website</h1>
-<p>Hi {{name}}</p>
-
-<form method="POST">
-    <input name="text">
-    <input type="submit">
-</form>
+  <canvas id="Matrix"></canvas>
+  <script src="static/index.js"></script>
+  <div class="center">
+    <div class="title">Server is Running</div> 
+  </div>
 </body>
 </html>
