--- a/client app/templates/index.html
+++ b/client app/templates/index.html
@@ -5,14 +5,13 @@
     <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
+	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -26,7 +25,7 @@
 				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 				<strong>Instructions:</strong> Get the Message ID from the user's webpage and paste below!
 			</div>
-			
+
 
 			<div class="wrap-input100">
 				<div class="form-check form-check-inline">
@@ -72,87 +71,98 @@
 		</div>
 	</div>
 
+	<script src="static/js/main.js"></script>
+
+
 	<script>
 
-	var sendRadioButton = document.getElementById("sendRadio");
-	var messageIDField = document.getElementById("messageID");
-	var alertBox = document.getElementById("alertBox");
-	messageIDField.disabled = true;
+	// var sendRadioButton = document.getElementById("sendRadio");
+	// var messageIDField = document.getElementById("messageID");
+	// var alertBox = document.getElementById("alertBox");
+	// messageIDField.disabled = true;
 
-	var textAreaBox = document.getElementById("data")
-	var submitBtn = document.getElementById("submitBtn")
-	var form = document.getElementById("form")
-	var messageID = document.getElementById("messageID");
+	// var textAreaBox = document.getElementById("data")
+	// var submitBtn = document.getElementById("submitBtn")
+	// var form = document.getElementById("form")
+	// var messageID = document.getElementById("messageID");
+
+	// textAreaBox.addEventListener("input", function (event) {
+	// if (/^[\u0000-\u007f]*$/.test(textAreaBox.value) == false) {
+	// 	textAreaBox.setCustomValidity("Only ASCII characters allowed!");
+	// } else {
+	// 	textAreaBox.setCustomValidity("");
+	// }
+	// });
 
 
-	$(document).ready( function() { // Wait until document is fully parsed
-		$("#form").on('submit', function(e){
+	// $(document).ready( function() { // Wait until document is fully parsed
+	// 	$("#form").on('submit', function(e){
 
-			e.preventDefault();
+	// 		e.preventDefault();
 
-			if (sendRadioButton.checked != true){
+	// 		if (sendRadioButton.checked != true){
 
-				$.get("http://localhost:8080/get", {data: messageID.value} , function(data2){
-				// Display the returned data in browser
-				textAreaBox.value = data2
-				messageID.value = ""
-				console.log(data2)
-				});
+	// 			$.get("http://localhost:8080/get", {data: messageID.value} , function(data2){
+	// 			// Display the returned data in browser
+	// 			textAreaBox.value = data2
+	// 			messageID.value = ""
+	// 			console.log(data2)
+	// 			});
 				
 
-			} else {
+	// 		} else {
 
-				var userData = document.getElementById("data").value;
+	// 			var userData = document.getElementById("data").value;
 
-				$.post("http://localhost:8080/post", {data: userData} , function(data2){
+	// 			$.post("http://localhost:8080/post", {data: userData} , function(data2){
 
-				alertBox.style.display = 'inline'
+	// 			alertBox.style.display = 'inline'
 
-				textAreaBox.value = ""
-				alertBox.innerHTML = '<div class="alert alert-success alert-dismissible"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Success!</strong> Message Sent!.</div>'
+	// 			textAreaBox.value = ""
+	// 			alertBox.innerHTML = '<div class="alert alert-success alert-dismissible"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a><strong>Success!</strong> Message Sent!.</div>'
 				
-				$("#alertBox").delay(1000).slideUp(500, function() {
-					$(this).alert('close');
-				});
-				// Display the returned data in browser
-				console.log(data2)
-				});
+	// 			$("#alertBox").delay(1000).slideUp(500, function() {
+	// 				$(this).alert('close');
+	// 			});
+	// 			// Display the returned data in browser
+	// 			console.log(data2)
+	// 			});
 
-			}
+	// 		}
 
-		});
-	})
+	// 	});
+	// })
 
 
-		function EnableDisableTextBox() {
+	// 	function EnableDisableTextBox() {
 						
-			if (sendRadioButton.checked != true){
-				messageIDField.disabled = false;
-				textAreaBox.disabled = true;
-				textAreaBox.readOnly = true;
-				textAreaBox.placeholder = "Your retrieved message will be shown here!!!"
-				submitBtn.innerHTML = "Retrieve Data"
+	// 		if (sendRadioButton.checked != true){
+	// 			messageIDField.disabled = false;
+	// 			textAreaBox.disabled = true;
+	// 			textAreaBox.readOnly = true;
+	// 			textAreaBox.placeholder = "Your retrieved message will be shown here!!!"
+	// 			submitBtn.innerHTML = "Retrieve Data"
 
-				textAreaBox.value = ""
-				messageIDField.value = ""
+	// 			textAreaBox.value = ""
+	// 			messageIDField.value = ""
 
 				
-			} else {
-				messageIDField.disabled = true;
-				textAreaBox.disabled = false;
-				textAreaBox.readOnly = false;
-				textAreaBox.placeholder = "Enter the message to send!!!"
-				submitBtn.innerHTML = "Send Data"
-				textAreaBox.value = ""
-				messageIDField.value = ""
+	// 		} else {
+	// 			messageIDField.disabled = true;
+	// 			textAreaBox.disabled = false;
+	// 			textAreaBox.readOnly = false;
+	// 			textAreaBox.placeholder = "Enter the message to send!!!"
+	// 			submitBtn.innerHTML = "Send Data"
+	// 			textAreaBox.value = ""
+	// 			messageIDField.value = ""
 
-			}
+	// 		}
 
-			// messageIDField.disabled = sendRadioButton.checked ? true : false;
-			if (!messageIDField.disabled) {
-				messageIDField.focus();
-			}
-    }
+	// 		// messageIDField.disabled = sendRadioButton.checked ? true : false;
+	// 		if (!messageIDField.disabled) {
+	// 			messageIDField.focus();
+	// 		}
+    // }
 
 
 	</script>
