--- a/client app/templates/index.html
+++ b/client app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Document</title>
+    <title>Client - Home</title>
 
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
 	<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
