Copy to clipboad feature added

--- a/client app/templates/table.html
+++ b/client app/templates/table.html
@@ -27,7 +27,7 @@
 							{%for i in range(0, len)%}
 							<tr>
 								<td class="column1">{{i}}</td>
-								<td class="column2">{{Data[i]}}</td>
+								<td class="column2 tooltip" onmouseout="outFunc()"">{{Data[i]}}<span class="tooltiptext">Copy to clipboard</span></td>
 							</tr>
 							{%endfor%}
 								
@@ -39,6 +39,22 @@
 		</div>
 	</div>
 
+	<script>
+
+		function outFunc() {
+			document.querySelectorAll('.tooltiptext')
+			.forEach(element => element.innerHTML = "Copy To Clipboad!");
+		}
+
+		document.querySelectorAll('.column2')
+			.forEach(e => e.addEventListener("click", function() {
+    		// Here, `this` refers to the element the event was hooked on
+			navigator.clipboard.writeText(this.childNodes[0].nodeValue);
+
+			document.querySelectorAll('.tooltiptext')
+			.forEach(element => element.innerHTML = "Copied To Clipboad!");
+		}));
+	</script>
 
 </body>
 </html>
