--- a/client app/static/table/css/main.css
+++ b/client app/static/table/css/main.css
@@ -1,5 +1,3 @@
-
-
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
@@ -271,4 +269,37 @@ tr {
     padding-left: 15px;
     padding-right: 15px;
   }
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 120%;
+  left: 30%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 2;
 }
